Made timer related tests more legible