@@ -22,46 +22,51 @@
 
 package com.github.javatlacati.contiperf.timer;
 
-import static org.junit.Assert.assertEquals;
-
 import com.github.javatlacati.contiperf.WaitTimer;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
+
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.is;
 
 /**
  * Tests the {@link ConstantTimer}.<br>
  * <br>
  * Created: 06.04.2012 18:10:41
- * 
- * @since 2.1.0
+ *
  * @author Volker Bergmann
+ * @since 2.1.0
  */
 public class ConstantTimerTest {
 
+    private static final int DEFAULT_WAIT_TIME = 1000;
+
     @Test
     public void testEmptyInitialization() throws Exception {
-	WaitTimer timer = ConstantTimer.class.newInstance();
-	timer.init(new double[0]);
-	for (int i = 0; i < 1000; i++) {
-	    assertEquals(1000, timer.getWaitTime());
-	}
+        WaitTimer timer = ConstantTimer.class.getDeclaredConstructor().newInstance();
+        timer.init(new double[0]);
+        for (int i = 0; i < 1000; i++) {
+            assertThat(timer.getWaitTime(), is(DEFAULT_WAIT_TIME));
+        }
     }
 
     @Test
     public void testNormalInitialization() throws Exception {
-	WaitTimer timer = ConstantTimer.class.newInstance();
-	timer.init(new double[] { 123 });
-	for (int i = 0; i < 1000; i++) {
-	    assertEquals(123, timer.getWaitTime());
-	}
+        WaitTimer timer = ConstantTimer.class.getDeclaredConstructor().newInstance();
+        int waitTime = 123;
+        timer.init(new double[]{waitTime});
+        for (int i = 0; i < 1000; i++) {
+            assertThat(timer.getWaitTime(), is(waitTime));
+        }
     }
 
     @Test
     public void testTooManyParams() throws Exception {
-	WaitTimer timer = ConstantTimer.class.newInstance();
-	timer.init(new double[] { 234, 456 });
-	for (int i = 0; i < 1000; i++) {
-	    assertEquals(234, timer.getWaitTime());
-	}
+        WaitTimer timer = ConstantTimer.class.getDeclaredConstructor().newInstance();
+        int waitTime = 234;
+        timer.init(new double[]{waitTime, 456});
+        for (int i = 0; i < 1000; i++) {
+            assertThat(timer.getWaitTime(), is(waitTime));
+        }
     }
 
 }
