@@ -22,59 +22,71 @@
 
 package com.github.javatlacati.contiperf.timer;
 
-import static org.junit.Assert.assertTrue;
-
 import com.github.javatlacati.contiperf.WaitTimer;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
+
+import java.util.Random;
+
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
  * Tests the {@link CumulatedTimer}.<br>
  * <br>
  * Created: 06.04.2012 18:19:40
- * 
- * @since 2.1.0
+ *
  * @author Volker Bergmann
+ * @since 2.1.0
  */
 public class CumulatedTimerTest {
 
+    private Random random = new Random();
+
     @Test
     public void testEmptyInitialization() throws Exception {
-	WaitTimer timer = CumulatedTimer.class.newInstance();
-	timer.init(new double[0]);
-	for (int i = 0; i < 1000; i++) {
-	    assertRange(500, 1500, timer.getWaitTime());
-	}
+        WaitTimer timer = CumulatedTimer.class.getDeclaredConstructor().newInstance();
+        timer.init(new double[0]);
+        final int defaultMinExpected = 500;
+        for (int i = 0; i < 1000; i++) {
+            assertRange(defaultMinExpected, defaultMinExpected + 1000, timer.getWaitTime());
+        }
     }
 
     @Test
     public void testUnderInitialization() throws Exception {
-	WaitTimer timer = CumulatedTimer.class.newInstance();
-	timer.init(new double[] { 2000 });
-	for (int i = 0; i < 1000; i++) {
-	    assertRange(2000, 3000, timer.getWaitTime());
-	}
+        WaitTimer timer = CumulatedTimer.class.getDeclaredConstructor().newInstance();
+        int minimumWaitTime = random.nextInt(2000);
+        timer.init(new double[]{minimumWaitTime});
+        for (int i = 0; i < 1000; i++) {
+            assertRange(minimumWaitTime, minimumWaitTime + 1000, timer.getWaitTime());
+        }
     }
 
     @Test
     public void testNormalInitialization() throws Exception {
-	WaitTimer timer = CumulatedTimer.class.newInstance();
-	timer.init(new double[] { 2000, 2500 });
-	for (int i = 0; i < 1000; i++) {
-	    assertRange(2000, 2500, timer.getWaitTime());
-	}
+        WaitTimer timer = CumulatedTimer.class.getDeclaredConstructor().newInstance();
+        int minimumWaitTime = random.nextInt(2000);
+        int maximumWaitTime = minimumWaitTime + random.nextInt(2500);
+        timer.init(new double[]{minimumWaitTime, maximumWaitTime});
+        for (int i = 0; i < 1000; i++) {
+            assertRange(minimumWaitTime, maximumWaitTime, timer.getWaitTime());
+        }
     }
+
+    //TODO add a test for testing Illegal argument exception to be thrown for non positive waiting times
 
     @Test
     public void testOverInitialization() throws Exception {
-	WaitTimer timer = CumulatedTimer.class.newInstance();
-	timer.init(new double[] { 2000, 2500, 3000 });
-	for (int i = 0; i < 1000; i++) {
-	    assertRange(2000, 2500, timer.getWaitTime());
-	}
+        WaitTimer timer = CumulatedTimer.class.getDeclaredConstructor().newInstance();
+        int minimumWaitTime = random.nextInt(2000);
+        int maximumWaitTime = minimumWaitTime + random.nextInt(2500);
+        timer.init(new double[]{minimumWaitTime, maximumWaitTime, 3000});
+        for (int i = 0; i < 1000; i++) {
+            assertRange(minimumWaitTime, maximumWaitTime, timer.getWaitTime());
+        }
     }
 
     private void assertRange(int minExpected, int maxExpected, int waitTime) {
-	assertTrue(minExpected <= waitTime && waitTime <= maxExpected);
+        assertTrue(minExpected <= waitTime && waitTime <= maxExpected);
     }
 
 }
